Fix headshots on Safari

--- a/css/resume.scss
+++ b/css/resume.scss
@@ -219,6 +219,7 @@ ul.skill-list {
                 position: absolute;
                 top: 50%;
                 left: 50%;
+                -webkit-transform: translateX(-50%) translateY(-50%);
                 transform: translateX(-50%) translateY(-50%);
                 border-radius: 50%;
                 background-size: cover;
